--- a/filtering Data/drop_duplicates.ipynb
+++ b/filtering Data/drop_duplicates.ipynb
@@ -2487,8 +2487,540 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
+   "id": "8076f73d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "id": "8516c523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2: Add a price category\n",
+    "df_laptops = pd.read_csv('laptop_price.csv', encoding='latin1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "574597cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a new col named price Category using np.select()\n",
+    "\n",
+    "conditions = [\n",
+    "    (df_laptops['Price_euros'] < 600),\n",
+    "    (df_laptops['Price_euros'] > 600) & (df_laptops['Price_euros'] <= 1500),\n",
+    "    (df_laptops['Price_euros'] > 1500)\n",
+    "]\n",
+    "\n",
+    "values =[\n",
+    "    'Budget',\n",
+    "    'Midrange',\n",
+    "    'Premium'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "f777ac38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Company\n",
+       "Dell         297\n",
+       "Lenovo       297\n",
+       "HP           274\n",
+       "Asus         158\n",
+       "Acer         103\n",
+       "MSI           54\n",
+       "Toshiba       48\n",
+       "Apple         21\n",
+       "Samsung        9\n",
+       "Mediacom       7\n",
+       "Razer          7\n",
+       "Microsoft      6\n",
+       "Vero           4\n",
+       "Xiaomi         4\n",
+       "Chuwi          3\n",
+       "Fujitsu        3\n",
+       "LG             3\n",
+       "Google         3\n",
+       "Huawei         2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating new col\n",
+    "\n",
+    "df_laptops['Price_tier'] = np.select(conditions, values, default='Some_string')\n",
+    "df_laptops.value_counts('Company')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3198a3b1",
+   "metadata": {},
+   "source": [
+    "### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "3aa6c1f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show all Dell laptops that are Ultrabooks and cost less than 1000 euros\n",
+    "\n",
+    "df_practice = ((df_laptops['Company'] == 'Dell') & (df_laptops['TypeName']=='Ultrabook') & (df_laptops['Price_euros'] < 1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "8a1d2528",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>laptop_ID</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price_euros</th>\n",
+       "      <th>Price_tier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>XPS 13</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Full HD / Touchscreen 1920x1080</td>\n",
+       "      <td>Intel Core i5 8250U 1.6GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>128GB SSD</td>\n",
+       "      <td>Intel UHD Graphics 620</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.22kg</td>\n",
+       "      <td>979.00</td>\n",
+       "      <td>Midrange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>62</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Vostro 5471</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 8250U 1.6GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel UHD Graphics 620</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.7kg</td>\n",
+       "      <td>879.00</td>\n",
+       "      <td>Midrange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>73</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Inspiron 5370</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i7 8550U 1.8GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>AMD Radeon 530</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.4kg</td>\n",
+       "      <td>955.00</td>\n",
+       "      <td>Midrange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>220</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Inspiron 5370</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i7 8550U 1.8GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>AMD Radeon 530</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.4kg</td>\n",
+       "      <td>931.88</td>\n",
+       "      <td>Midrange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>260</td>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Vostro 5370</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 8250U 1.6GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel UHD Graphics 620</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.41kg</td>\n",
+       "      <td>949.00</td>\n",
+       "      <td>Midrange</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     laptop_ID Company        Product   TypeName  Inches  \\\n",
+       "19          20    Dell         XPS 13  Ultrabook    13.3   \n",
+       "61          62    Dell    Vostro 5471  Ultrabook    14.0   \n",
+       "71          73    Dell  Inspiron 5370  Ultrabook    13.3   \n",
+       "215        220    Dell  Inspiron 5370  Ultrabook    13.3   \n",
+       "255        260    Dell    Vostro 5370  Ultrabook    13.3   \n",
+       "\n",
+       "                              ScreenResolution                         Cpu  \\\n",
+       "19   IPS Panel Full HD / Touchscreen 1920x1080  Intel Core i5 8250U 1.6GHz   \n",
+       "61                           Full HD 1920x1080  Intel Core i5 8250U 1.6GHz   \n",
+       "71                 IPS Panel Full HD 1920x1080  Intel Core i7 8550U 1.8GHz   \n",
+       "215                IPS Panel Full HD 1920x1080  Intel Core i7 8550U 1.8GHz   \n",
+       "255                          Full HD 1920x1080  Intel Core i5 8250U 1.6GHz   \n",
+       "\n",
+       "     Ram     Memory                     Gpu       OpSys  Weight  Price_euros  \\\n",
+       "19   8GB  128GB SSD  Intel UHD Graphics 620  Windows 10  1.22kg       979.00   \n",
+       "61   8GB  256GB SSD  Intel UHD Graphics 620  Windows 10   1.7kg       879.00   \n",
+       "71   8GB  256GB SSD          AMD Radeon 530  Windows 10   1.4kg       955.00   \n",
+       "215  8GB  256GB SSD          AMD Radeon 530  Windows 10   1.4kg       931.88   \n",
+       "255  8GB  256GB SSD  Intel UHD Graphics 620  Windows 10  1.41kg       949.00   \n",
+       "\n",
+       "    Price_tier  \n",
+       "19    Midrange  \n",
+       "61    Midrange  \n",
+       "71    Midrange  \n",
+       "215   Midrange  \n",
+       "255   Midrange  "
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_laptops[df_practice].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e72c92",
+   "metadata": {},
+   "source": [
+    "### Exercise4: For each company, find the lightest laptop they sell and cheapest among those lightest models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "08046e19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>laptop_ID</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price_euros</th>\n",
+       "      <th>Price_tier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Retina Display 2560x1600</td>\n",
+       "      <td>Intel Core i5 2.3GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>128GB SSD</td>\n",
+       "      <td>Intel Iris Plus Graphics 640</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.37kg</td>\n",
+       "      <td>1339.69</td>\n",
+       "      <td>Midrange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Macbook Air</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>1440x900</td>\n",
+       "      <td>Intel Core i5 1.8GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>128GB Flash Storage</td>\n",
+       "      <td>Intel HD Graphics 6000</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.34kg</td>\n",
+       "      <td>898.94</td>\n",
+       "      <td>Midrange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>250 G6</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 7200U 2.5GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>No OS</td>\n",
+       "      <td>1.86kg</td>\n",
+       "      <td>575.00</td>\n",
+       "      <td>Budget</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>IPS Panel Retina Display 2880x1800</td>\n",
+       "      <td>Intel Core i7 2.7GHz</td>\n",
+       "      <td>16GB</td>\n",
+       "      <td>512GB SSD</td>\n",
+       "      <td>AMD Radeon Pro 455</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.83kg</td>\n",
+       "      <td>2537.45</td>\n",
+       "      <td>Premium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Retina Display 2560x1600</td>\n",
+       "      <td>Intel Core i5 3.1GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel Iris Plus Graphics 650</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.37kg</td>\n",
+       "      <td>1803.60</td>\n",
+       "      <td>Premium</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   laptop_ID Company      Product   TypeName  Inches  \\\n",
+       "0          1   Apple  MacBook Pro  Ultrabook    13.3   \n",
+       "1          2   Apple  Macbook Air  Ultrabook    13.3   \n",
+       "2          3      HP       250 G6   Notebook    15.6   \n",
+       "3          4   Apple  MacBook Pro  Ultrabook    15.4   \n",
+       "4          5   Apple  MacBook Pro  Ultrabook    13.3   \n",
+       "\n",
+       "                     ScreenResolution                         Cpu   Ram  \\\n",
+       "0  IPS Panel Retina Display 2560x1600        Intel Core i5 2.3GHz   8GB   \n",
+       "1                            1440x900        Intel Core i5 1.8GHz   8GB   \n",
+       "2                   Full HD 1920x1080  Intel Core i5 7200U 2.5GHz   8GB   \n",
+       "3  IPS Panel Retina Display 2880x1800        Intel Core i7 2.7GHz  16GB   \n",
+       "4  IPS Panel Retina Display 2560x1600        Intel Core i5 3.1GHz   8GB   \n",
+       "\n",
+       "                Memory                           Gpu  OpSys  Weight  \\\n",
+       "0            128GB SSD  Intel Iris Plus Graphics 640  macOS  1.37kg   \n",
+       "1  128GB Flash Storage        Intel HD Graphics 6000  macOS  1.34kg   \n",
+       "2            256GB SSD         Intel HD Graphics 620  No OS  1.86kg   \n",
+       "3            512GB SSD            AMD Radeon Pro 455  macOS  1.83kg   \n",
+       "4            256GB SSD  Intel Iris Plus Graphics 650  macOS  1.37kg   \n",
+       "\n",
+       "   Price_euros Price_tier  \n",
+       "0      1339.69   Midrange  \n",
+       "1       898.94   Midrange  \n",
+       "2       575.00     Budget  \n",
+       "3      2537.45    Premium  \n",
+       "4      1803.60    Premium  "
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_laptops.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "b0315fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sorting our df\n",
+    "df_laptops_sort_weight = df_laptops.sort_values(['Company', 'Weight', 'Price_euros'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "8d1c7a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price_euros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>791</th>\n",
+       "      <td>Vero</td>\n",
+       "      <td>1.22kg</td>\n",
+       "      <td>202.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Company  Weight  Price_euros\n",
+       "791    Vero  1.22kg        202.9"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# removing the duplicates\n",
+    "df_laptops_light = df_laptops_sort_weight.drop_duplicates('Company')\n",
+    "# sorting the price col to get cheapest laptop among all companies\n",
+    "df_laptops_light_sort = df_laptops_light.sort_values('Price_euros')\n",
+    "# Printing the cheapest laptops\n",
+    "df_laptops_light_sort[['Company', 'Weight', 'Price_euros']].head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7244dc94",
    "metadata": {},
    "outputs": [],
    "source": []
